# hh_parser-worker

./: .env.default  Makefile  README.md  pyproject.toml
parser/: config.py  hh.py
worker/: __main__.py  hh_parser.py
